actualizacion de pagina

--- a/index.html
+++ b/index.html
@@ -4,9 +4,72 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pag_1</title>
+    <link rel="stylesheet" href="styles/styles.css" />
 </head>
 <body>
-    <p>hola</p>
+    <!--logo sobre portada-->
+    <div class="image">
+        <img src="img/perfil.jpg">
+    </div>
+    <div class="portada">
+        <img src="img/portada.jpg">
+    </div>
+
+    <h1>Lucas M. Ilustración y Diseño</h1>
+    <!--Menu-->
+    <ul class="menu">
+        <li><a href="#">Inicio</a></li>
+        <li><a href="#">Comprar</a></li>
+        <li><a href="#">Contacto</a></li>
+        <li><a href="#">Registrarse</a></li>
+    </ul>
+    <div id="conteCarrusel">
+        <!--img / tarjeta 1-->
+        <div class="carrusel" id="item-1">
+            <div class="fotos" id="tarjeta-1">
+                A
+            </div>
+            <div class="flechas">
+                <a href="item-3">
+                    <i>I</i>
+                </a>
+                <a href="item-2">
+                    <i>D</i>
+                </a>    
+            </div>
+        </div>
+
+        <!--img / tarjeta 1-->
+        <div class="carrusel" id="item-2">
+            <div class="fotos">
+                B
+            </div>
+            <div class="flechas" id="tarjeta-2">
+                <a href="#item-1">
+                    <i>I</i>
+                </a>
+                <a href="item-3">
+                    <i>D</i>
+                </a>    
+            </div>
+        </div>
+
+        <div class="carrusel" id="item-3">
+            <div class="fotos">
+                B
+            </div>
+            <div class="flechas" id="tarjeta-3">
+                <a href="#item-2">
+                    <i>I</i>
+                </a>
+                <a href="#item-1">
+                    <i>D</i>
+                </a>    
+            </div>
+        </div>
+    </div>
+    
+    <p></p>
 </body>
 </html>
